[metadata]
name = gristle
version = 0.0.1
summary = gristle: A GitHub repo event SSH relay
description-file =
    README.md
author = Tim Chavez
author-email = timrchavez@gmail.com
home-page = https://github.com/timrchavez/gristle
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    gristle = gristle.run:main

[files]
packages =
    gristle
